--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <title>Document</title>
+
+    <title>Bad Jokes</title>
 </head>
 <body>
-    
+    <div class="jumbotron">
+        <h1 class="display-4">Bad Jokes</h1>
+    <!-- <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p> -->
+        <hr class="my-4">
+        <p class="lead" id="jokebox">Push the button! </p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" id="dadjokes" href="#" role="button">More Jokes!!</a>
+        </p>
+      </div>
 </body>
+<script src="script.js"></script>
 </html>
