--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <title>Bad Jokes</title>
 </head>
 <body>
+    <button id="mode" class="btn">Dark Mode</button>
     <div class="jumbotron">
         <h1 class="display-4">Bad Jokes</h1>
-    <!-- <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p> -->
         <hr class="my-4">
-        <p class="lead" id="jokebox">Push the button! </p>
+        <p class="lead" id="jokebox">What is orange and sounds like a carrot? Parrot</p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" id="dadjokes" href="#" role="button">More Jokes!!</a>
+          <a class="btn btn-primary btn-lg" id="dadjokes" href="#" role="button">New Joke</a>
         </p>
       </div>
 </body>
