--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="jumbotron">
         <h1 class="display-4">Bad Jokes</h1>
         <hr class="my-4">
-        <p class="lead" id="jokebox">What is orange and sounds like a carrot? Parrot</p>
+        <p class="lead" id="jokebox">What is orange and sounds like a parrot? Carrot</p>
         <p class="lead">
           <a class="btn btn-primary btn-lg" id="dadjokes" href="#" role="button">New Joke</a>
         </p>
