chnage anchor tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <hr class="my-4">
         <p class="lead" id="jokebox">What is orange and sounds like a parrot? Carrot</p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" id="dadjokes" href="#" role="button">New Joke</a>
+          <a class="btn btn-primary btn-lg" id="dadjokes" role="button">New Joke</a>
         </p>
       </div>
 </body>
